Attempt to fix dark mode issue

--- a/src/pages/Games/SnipSnapSnorum/SnipSnapSnorum.module.css
+++ b/src/pages/Games/SnipSnapSnorum/SnipSnapSnorum.module.css
@@ -33,7 +33,7 @@
   background-attachment: fixed; */
   padding: 10px;
 }
-.playSpace#darkMode {
+.SnipSnapSnorum > div#darkMode {
   margin: 20px;
   border: solid red;
   background-color: blue;
